@@ -214,6 +214,13 @@ execute_process (COMMAND pkg-config --libs gnutls
   OUTPUT_VARIABLE GNUTLS_LDFLAGS
   OUTPUT_STRIP_TRAILING_WHITESPACE)
 
+execute_process (COMMAND libgcrypt-config --libs
+  OUTPUT_VARIABLE GCRYPT_LDFLAGS
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process (COMMAND libgcrypt-config --cflags
+  OUTPUT_VARIABLE GCRYPT_CFLAGS
+  OUTPUT_STRIP_TRAILING_WHITESPACE)
+
 ## Version
 
 string (REPLACE "
